# LAN-CHAT

./: CMakeLists.txt  README.md  build.bat
include/: chat_session.h  client.h  client_handler.h  compat.h  message.h  network_manager.h  room.h  server.h  socket_wrapper.h  version.h
src/: chat_session.cpp  client.cpp  client_handler.cpp  main.cpp  message.cpp  network_manager.cpp  room.cpp  server.cpp  socket_wrapper.cpp
